force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/KimbleOne__DeliveryGroupSnapshot__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Engagement Snapshot</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Delivery Group Snapshot Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Engagement Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>