force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__ActualUsage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActualUsage__c</fullName>
    <label>Actual Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>