force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__BaselineContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineContractMarginAmount__c</fullName>
    <label>Baseline Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>