force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__ContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMarginAmount__c</fullName>
    <label>Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>