force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Engagement</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipLabel>Delivery Engagement Snapshots</relationshipLabel>
    <relationshipName>DeliveryGroupSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>