force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__ForecastStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Status</label>
    <referenceTo>KimbleOne__ForecastStatus__c</referenceTo>
    <relationshipLabel>Delivery Engagement Snapshots</relationshipLabel>
    <relationshipName>DeliveryEngagementSnapshots</relationshipName>
    <type>Lookup</type>
</CustomField>