force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__Proposal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Proposal__c</fullName>
    <label>Proposal</label>
    <referenceTo>KimbleOne__Proposal__c</referenceTo>
    <relationshipLabel>Delivery Engagement Snapshots</relationshipLabel>
    <relationshipName>DeliveryEngagementSnapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>