force-app/main/default/objects/KimbleOne__DeliveryGroupSnapshot__c/fields/KimbleOne__SnapshotDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SnapshotDate__c</fullName>
    <label>Snapshot Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>